--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             <input type="text" id="input" placeholder="Add a to-do">
         </div>
     </div>
+
+    <script src="./app.js"></script>
 </body>
 
 </html>
